Fix test compilation error